Updated brand and env json file. Added view porst and timeouts and updated configReader file

--- a/Utility/Config.json
+++ b/Utility/Config.json
@@ -1,5 +1,15 @@
 {
-    "OrangeHRBaseUrl": "https://opensource-demo.orangehrmlive.com",
+    "Brand": "OrangeHR",
     "Browser": "Firefox",
-    "Headless": false
+    "Headless": false,
+    "Timeouts": {
+        "ImplicitWait": 10,
+        "PageLoad": 30,
+        "AsynchronousJavaScript": 30
+    },
+    "Viewport": {
+        "Width": 1920,
+        "Height": 1080
+    },
+    "Maximize": true
 }
